Fix FileIOTest in Java 11.