@@ -230,7 +230,7 @@ test {
     exclude "**/SplitInputStreamTest.class"
     exclude "**/JPF_*.class"
 
-    jvmArgs += ['--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED'];
+    jvmArgs += ['--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED', '--add-opens', 'java.base/jdk.internal.misc=ALL-UNNAMED'];
 
     testLogging {
         events "passed", "skipped", "failed"
